# tiva_midi_controller

./: .gitignore  COMPARISON.md  Cargo.toml  DEBUGGING.md  DEBUG_SETUP.md  GDB_COMMANDS.md  Makefile  README.md  TESTING.md  build.rs  debug_hardfault.gdb  debug_jumptable.gdb  debug_jumptable_simple.gdb  debug_usb.gdb  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml  tm4c123gh6pm.ld
.cargo/: config.toml
src/: main.c  main.rs  startup.c  usb_descriptors.rs  usb_device.rs
